--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <title>Угадай число</title>
+    <title>Guess the number</title>
 </head>
 <body>
     <div class="left">
-        <h1>Игра "Угадай число"</h1>
+        <h1>Game "Guess the number"</h1>
     
-        <p>Выбери минимальное число <input id="min" required> и маскимальное <input id ="max" required>. Попробуй угадать его за <strong>5</strong> попыток.<br>Я буду подсказывать, если задуманное число больше или меньше.<br> Если вы выйдете за придел диапазона игра будет окончена.</p>
+        <p>You can chose minimal value <input id="min" required> and maximal <input id ="max" required>. You'll can try guess it for <strong>5</strong> attempts.<br>I'll say you if numbers more or less.<br> If you go out of range the game will be over.</p>
         <input type="submit" value="CHECK" class="submitCheck"> <input type="submit" value="EXIT" class="submitExit">
-        <p id ="live">Ваши жизни: <span id="lives">5</span> ❤️</p>
+        <p id ="live">Your lives: <span id="lives">5</span> ❤️</p>
         <div class="form">
-          <label for="guessField">Твой вариант: </label><input type="text" id="guessField" class="guessField">
+          <label for="guessField">Your chose: </label><input type="text" id="guessField" class="guessField">
           <input type="submit" value="Отгадать" class="guessSubmit">
         </div>
     
